# ykkz

./: README.md  config.yml  go-cqhttp.bat  requirements.txt
unidbg-fetch-qsign-1.1.9/txlib/8.9.63/: .system_android_l2  config.json
unidbg-fetch-qsign-1.1.9/txlib/8.9.68/: .system_android_l2  config.json
unidbg-fetch-qsign-1.1.9/txlib/8.9.71/: config.json
ykkz/: .env  .env.prod  bot.py  pyproject.toml
ykkz/src/plugins/ykkz_core/: README.md  __init__.py  utils.py
ykkz/src/plugins/ykkz_core/json/: Config.json  Context.json  Multi.json
ykkz/vits/: README.md  inference_main.py
